# rag

./: .env.example  .gitignore  .pylintrc  README.md  config.example.yaml  config.yaml  pyproject.toml  query.py  requirements.txt  run.py  vector_index_construction.py
data/: logs
data/storage/: id_map.json  markdown.md  新建 文本文档.txt  王旭辉-7年后端开发工程师.docx
data/vector_index/: index.faiss  index.pkl
docker/: Dockerfile.backend  docker-compose.yml  nginx.conf
docs/: API.md  DEPLOYMENT.md  TECHNICAL_DESIGN.md
src/application/services/: __init__.py  document_storage_management_service.py  indexing_service.py  rag_pipeline_service.py
src/domain/entities/: __init__.py  document.py  document_chunk.py  qa_context.py  search_result.py  user_query.py
src/domain/interfaces/: __init__.py  document_loader_service.py  document_splitter_service.py  document_storage_service.py  embedding_service.py  infra_document_splitter_adapter.py  llm_service.py  prompt_service.py  vector_store_service.py
src/domain/services/: prompt_service_impl.py
src/infrastructure/config/: __init__.py  config_manager.py
src/infrastructure/document_storage/: __init__.py  base.py  local_provider.py  s3_provider.py  test_local_provider.py
src/infrastructure/embedding/: aliyun_provider.py  base.py  huggingface_provider.py  openai_provider.py
src/infrastructure/llm/: aliyun_provider.py  base.py  openai_provider.py
src/infrastructure/loaders/: __init__.py  base.py  document_loader_service_impl.py  docx_loader.py  factory.py  json_loader.py  markdown_loader.py  pdf_loader.py  text_loader.py  types.py
src/infrastructure/log/: __init__.py  logger_service.py  logger_service_impl.py
src/infrastructure/prompt/: prompt_service_impl.py  types.py
src/infrastructure/splitters/: __init__.py  base.py  document_splitter_service_impl.py  docx_splitter.py  (+6 more)
src/presentation/: container.py  main.py  service_factory.py
web/: app.js  index.html  style.css
(+4 files in other folders)
