[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hhh"
version = "0.1.0"
description = "AI-powered RAG system"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.black]
# Black 代码格式化配置
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by ^/ will apply only to files and directories
# in the root of the project.
(
  ^/migrations/  # exclude migrations
  | __pycache__
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
)
'''

[tool.isort]
# isort 导入排序配置
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
# 导入分组配置
known_first_party = ["src"]
known_third_party = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "langchain",
    "langchain_community",
    "langchain_openai",
    "langchain_huggingface",
    "openai",
    "transformers",
    "torch",
    "numpy",
    "pandas",
    "faiss",
    "chromadb",
    "aiofiles",
    "aiohttp",
    "httpx",
    "requests",
    "pyyaml",
    "loguru",
    "pytest"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
# 跳过的文件和目录
skip = [
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations"
]